fix: added more white space

--- a/index.css
+++ b/index.css
@@ -238,14 +238,14 @@ animation: gradient 8s ease infinite;
 /* section b */
 .section-b{
 
-padding-top:3em;
+padding-top:5em;
 margin-bottom: 3em;
-
+padding-bottom: 5em;
 
 }
 .section-b h2{
 
-    padding-bottom: 1.5em;
+    padding-bottom: 2.5em;
 }
 
 .section-b .date{
@@ -322,9 +322,9 @@ column-gap: 2em;
 
     background: var(--light-color);
 
-    padding-top: 3em;
+    padding-top: 5em;
     
-   padding-bottom: 2.5em;
+   padding-bottom: 5em;
     
 }
 .section-c .wrapper{
@@ -360,8 +360,8 @@ column-gap: 2em;
 
 /* section d */
 .section-d{
-padding-top: 1.5em;
-padding-bottom: 1.5em;
+padding-top: 5em;
+padding-bottom: 5em;
 margin-bottom:1.3em;
 margin-top:1.5em;
 }
@@ -414,8 +414,8 @@ margin-top:1.5em;
 
 
 background: var(--light-color);
-padding-top: 1.5em;
-padding-bottom: 1.5em;
+padding-top: 5em;
+padding-bottom: 5em;
 }
 
 .section-e h2{
@@ -438,13 +438,19 @@ line-height: 3;
 
 .section-f{
 
-padding-top: 1.5em;
-padding-bottom: 1.5em;
+padding-top: 5em;
+padding-bottom: 5em;
 margin-bottom: 1.5em;
 }
 
 .section-f h2{
-    margin-bottom: 1.2em;
+   
+    margin-bottom: 1.1em;
+    margin-top: 1.1em;
+}
+.section-f p{
+
+  padding-bottom: 1.5em;
 }
 
 /* footer */
